Fixed scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,44 +4,51 @@
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-    max-height: 100%;
-    width: auto;
-    overflow-y: auto;
+  font-family: 'Poppins', sans-serif;
+  background: #fafafa;
+  max-height: 100%;
+  width: auto;
+  overflow-y: auto;
 }
 
 a,
 a:hover,
 a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s;
 }
 
+* {
+  box-sizing: border-box;
+}
 
 /* ---------------------------------------------------
     SCROLLBAR STYLE
 ----------------------------------------------------- */
 
 /* width */
+
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 /* Track */
+
 ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+  background: transparent;
 }
- 
+
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
-    background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+  background: #555;
 }
 
 /* ---------------------------------------------------
@@ -83,7 +90,8 @@ a:focus {
     MENU & LOGO BORDERS
 ----------------------------------------------------- */
 
-#menu, #logo {
+#menu,
+#logo {
   border-bottom: 1px solid #454545;
 }
 
@@ -106,6 +114,10 @@ a:focus {
   background: #1f1f1f;
   color: #fff;
   transition: all 0.3s;
+}
+
+nav {
+  overflow-y: auto;
 }
 
 #sidebar.active {
@@ -137,7 +149,6 @@ a:focus {
   background: #fff;
 }
 
-
 a[data-toggle="collapse"] {
   position: relative;
 }
@@ -151,31 +162,26 @@ a[data-toggle="collapse"] {
 }
 
 ul ul a {
-  font-size: 0.9em 
+  font-size: 0.9em; 
   padding-left: 30px;
   background: #272727;
 }
-
-ul.CTAs {
-  padding: 10px;
-}
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
 
 #content {
-    width: calc(100% - 250px);
-    padding: 40px;
-    min-height: 100vh;
-    transition: all 0.3s;
-    position: absolute;
-    top: 0;
-    right: 0;
+  width: calc(100% - 250px);
+  padding: 40px;
+  min-height: 100%;
+  transition: all 0.3s;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 #content.active {
-    width: 100%;
+  width: 100%;
 }
 
 /* ---------------------------------------------------
@@ -183,19 +189,19 @@ ul.CTAs {
 ----------------------------------------------------- */
 
 @media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-    #content {
-        width: 100%;
-    }
-    #content.active {
-        width: calc(100% - 250px);
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
+  #sidebar {
+    margin-left: -250px;
+  }
+  #sidebar.active {
+    margin-left: 0;
+  }
+  #content {
+    width: 100%;
+  }
+  #content.active {
+    width: calc(100% - 250px);
+  }
+  #sidebarCollapse span {
+    display: none;
+  }
 }
